mod: update site

--- a/book/index.html
+++ b/book/index.html
@@ -7,7 +7,7 @@
   
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
 
-  <title> Mindmap &middot; Akagi201&#39;s Cyberspace </title>
+  <title> Books &middot; Akagi201&#39;s Cyberspace </title>
 
   
   <link rel="stylesheet" href="http://akagi201.github.io/css/syntax.css">
@@ -19,7 +19,7 @@
   <link rel="shortcut icon" href="/favicon.ico">
 
   
-  <link href="http://akagi201.github.io/categories/mindmap/index.xml" rel="alternate" type="application/rss+xml" title="Akagi201&#39;s Cyberspace" />
+  <link href="http://akagi201.github.io/book/index.xml" rel="alternate" type="application/rss+xml" title="Akagi201&#39;s Cyberspace" />
 </head>
 
 <body>
@@ -60,7 +60,7 @@
     <div class="content container">
   <ul class="posts">
       
-      <li><span><a href="http://akagi201.github.io/mindmap/mindmap-template">mindmap template</a><time class="pull-right post-list">Thu, May 1, 2014</h4></time></span></span></li>
+      <li><span><a href="http://akagi201.github.io/book/book-template">book template</a><time class="pull-right post-list">Thu, May 1, 2014</h4></time></span></span></li>
       
   </ul>
     </div>
